--- a/public/login.html
+++ b/public/login.html
@@ -14,8 +14,29 @@
             <input type="password" id="login-password" name="password" placeholder="Пароль" required>
             <button type="submit">Войти</button>
         </form>
+        <script>
+            document.getElementById('login-form').addEventListener('submit', async (e) => {
+                e.preventDefault();
+                const username = document.getElementById('login-username').value;
+                const password = document.getElementById('login-password').value;
+
+                try {
+                    const response = await fetch('http://localhost:3001/users');
+                    const users = await response.json();
+                    const user = users.find(user => user.username === username && user.password === password);
+                    if (user) {
+                        localStorage.setItem('user', JSON.stringify(user));
+                        window.location.href = 'profile.html';
+                    } else {
+                        alert('Неверный логин или пароль');
+                    }
+                } catch (error) {
+                    console.error('Login error:', error);
+                    alert('Ошибка входа');
+                }
+            });
+        </script>
     </div>
-    <script src="login.js"></script>
 </body>
 
 </html>
