--- a/public/search.html
+++ b/public/search.html
@@ -7,17 +7,12 @@
 </head>
 
 <body>
-    <script>
-        if (!localStorage.getItem('user')) {
-            window.location.href = '/login';
-        }
-    </script>
     <header>
         <h1>DA RAM</h1>
         <nav>
-            <a href="/">Главная</a>
-            <a href="/profile">Профиль</a>
-            <a href="/search">Поиск</a>
+            <a href="index.html">Главная</a>
+            <a href="profile.html">Профиль</a>
+            <a href="search.html">Поиск</a>
         </nav>
     </header>
     <main>
@@ -27,7 +22,6 @@
             <!-- Результаты поиска будут загружены здесь -->
         </div>
     </main>
-    <script src="script.js"></script>
 </body>
 
 </html>
