--- a/public/login.html
+++ b/public/login.html
@@ -14,6 +14,7 @@
             <input type="password" id="login-password" name="password" placeholder="Пароль" required>
             <button type="submit">Войти</button>
         </form>
+        <p>Нет аккаунта? <a href="register.html">Зарегистрируйтесь</a></p>
         <script>
             document.getElementById('login-form').addEventListener('submit', async (e) => {
                 e.preventDefault();
