--- a/public/register.html
+++ b/public/register.html
@@ -14,6 +14,7 @@
             <input type="password" id="register-password" name="password" placeholder="Пароль" required>
             <button type="submit">Зарегистрироваться</button>
         </form>
+        <p>Уже есть аккаунт? <a href="login.html">Войдите</a></p>
         <script>
             document.getElementById('register-form').addEventListener('submit', async (e) => {
                 e.preventDefault();
