--- a/public/search.html
+++ b/public/search.html
@@ -10,17 +10,23 @@
     <header>
         <h1>DA RAM</h1>
         <nav>
-            <a href="index.html">Главная</a>
+            <a href="/">Главная</a>
             <a href="profile.html">Профиль</a>
             <a href="search.html">Поиск</a>
+            <a href="#" id="logout-link">Выйти</a>
         </nav>
     </header>
     <main>
         <h2>Поиск</h2>
         <input type="text" id="search-input" placeholder="Введите запрос">
         <div id="search-results">
-            <!-- Результаты поиска будут загружены здесь -->
         </div>
+        <script>
+            document.getElementById('logout-link').addEventListener('click', () => {
+                localStorage.removeItem('user');
+                window.location.href = 'login.html';
+            });
+        </script>
     </main>
 </body>
 
