--- a/public/login.html
+++ b/public/login.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>DA RAM - Вход</title>
+    <title>EACAgram - Вход</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
