--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <title>DA RAM</title>
+    <title>EACAgram</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header class="site-header">
-        <h1>DA RAM</h1>
+        <h1>EACAgram</h1>
         <nav>
             <a href="/">Главная</a>
             <a href="profile.html">Профиль</a>
