--- a/public/register.html
+++ b/public/register.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>DA RAM - Регистрация</title>
+    <title>EACAgram - Регистрация</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
